--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <body>
     <h1 id="title">freeCodeCamp Survey Form</h1>
     <p id="description">Thank you for taking the time to help us improve the platform</p>
-   
+   <form id="survey-form">
+      <label id="name-label">Name <input type="text" id="name" placeholder="name" required></label>
+      <label id="email-label">Email <input type="email" id="email" placeholder="email" required></label>
+      <label id="number-label">Number <input type="number" id="number" min="1" max="5" placeholder="number"></label>
+      <select id="dropdown">
+        <option value="option1">Option 1</option>
+        <option value="option2">Option 2</option>
+        </select>
+        <input type="radio" name="radio-group" value="choice1"> Choice 1
+        <input type="radio" name="radio-group" value="choice2"> Choice 2
+        <input type="checkbox" name="checkbox1" value="option1"> Checkbox 1
+        <input type="checkbox" name="checkbox2" value="option2"> Checkbox 2
+        <textarea name="comments" placeholder="Enter your additional comments here..."></textarea>
+      <button type="submit" id="submit">Submit</button>
+    </form>
   </body>
 </html>
