Add survey form to homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1 id="title">freeCodeCamp Survey Form</h1>
+    <h1 id="title">Survey Form</h1>
     <p id="description">Thank you for taking the time to help us improve the platform</p>
    <form id="survey-form">
       <label id="name-label">Name <input type="text" id="name" placeholder="name" required></label>
